Retter flere toList saker (#385)
* Retter flere toList saker

* Importfiks